第10天与第11天

--- a/day10/4-个人简历.html
+++ b/day10/4-个人简历.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<title>个人简历</title>
 	<style type="text/css">
+	table{
+		margin: 0 auto;
+	}
 		#t1{
 			border-collapse: collapse;
 		}
